// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textTrim renders 0 1`] = `
Array [
  .c0 {
  text-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders function 1`] = `
Array [
  .c0 {
  text-trim: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders invalid theme path 1`] = `
Array [
  .c0 {
  text-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders negative number 1`] = `
Array [
  .c0 {
  text-trim: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-trim: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-trim: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-trim: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-trim: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-trim: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-trim: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-trim: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-trim: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-trim: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-trim: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-trim: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-trim: July;
}

@media May {
  .c0 {
    text-trim: August;
  }
}

@media April {
  .c0 {
    text-trim: September;
  }
}

@media January {
  .c0 {
    text-trim: November;
  }
}

@media April {
  .c0 {
    text-trim: August;
  }
}

@media June {
  .c0 {
    text-trim: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-trim: July;
}

@media May {
  .c0 {
    text-trim: August;
  }
}

@media April {
  .c0 {
    text-trim: September;
  }
}

@media January {
  .c0 {
    text-trim: November;
  }
}

@media April {
  .c0 {
    text-trim: August;
  }
}

@media June {
  .c0 {
    text-trim: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-trim: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-trim: November;
  }
}

@media April {
  .c0 {
    text-trim: January;
  }
}

@media January {
  .c0 {
    text-trim: December;
  }
}

@media April {
  .c0 {
    text-trim: April;
  }
}

@media June {
  .c0 {
    text-trim: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-trim: November;
  }
}

@media April {
  .c0 {
    text-trim: January;
  }
}

@media January {
  .c0 {
    text-trim: December;
  }
}

@media April {
  .c0 {
    text-trim: April;
  }
}

@media June {
  .c0 {
    text-trim: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-trim: July;
  }
}

@media April {
  .c0 {
    text-trim: August;
  }
}

@media January {
  .c0 {
    text-trim: September;
  }
}

@media April {
  .c0 {
    text-trim: November;
  }
}

@media June {
  .c0 {
    text-trim: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-trim: July;
  }
}

@media April {
  .c0 {
    text-trim: August;
  }
}

@media January {
  .c0 {
    text-trim: September;
  }
}

@media April {
  .c0 {
    text-trim: November;
  }
}

@media June {
  .c0 {
    text-trim: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-trim: January;
  }
}

@media April {
  .c0 {
    text-trim: December;
  }
}

@media January {
  .c0 {
    text-trim: April;
  }
}

@media April {
  .c0 {
    text-trim: May;
  }
}

@media June {
  .c0 {
    text-trim: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-trim: January;
  }
}

@media April {
  .c0 {
    text-trim: December;
  }
}

@media January {
  .c0 {
    text-trim: April;
  }
}

@media April {
  .c0 {
    text-trim: May;
  }
}

@media June {
  .c0 {
    text-trim: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders postitive number 1`] = `
Array [
  .c0 {
  text-trim: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders string 1`] = `
Array [
  .c0 {
  text-trim: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textTrim renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textTrim renders valid theme path 1`] = `
Array [
  .c0 {
  text-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
